# fastmcp_azd_deploy_visualization

./: CHART_README.md  README.md  pyproject.toml  pytest.ini
infra/: resources.bicep
src/: app.py  requirements.txt
tests/: test_app.py
