[project]
name = "fastmcp-azd-deploy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111,<0.112",
    "fastmcp>=2.7.0",
    "gunicorn>=22.0,<23.0",
    "mcp[cli]>=1.9.3",
    "uvicorn>=0.23,<0.24",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "ipykernel>=6.30.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
]
[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
